Fix markup in photo details table

--- a/public/index.html
+++ b/public/index.html
@@ -57,8 +57,8 @@
         <tr><th>Aperture size</th><td>f/{{exif.FNumber}}</td></tr>
         <tr><th>ISO</th><td>{{exif.ISO}}</td></tr>
         <tr><th>Exp. compensation</th><td>{{exif.ExposureCompensation}}</td></tr>
-        <tr><th>Light source</th><td>{{exif.LightSource}}</td </tr>
-        <tr><th>Focus mode</th><td>{{exif.FocusMode}}</td </tr>
+        <tr><th>Light source</th><td>{{exif.LightSource}}</td></tr>
+        <tr><th>Focus mode</th><td>{{exif.FocusMode}}</td></tr>
         <tr><th>Shooting mode</th><td>{{exif.ShootingMode}}</td></tr>
       </table>
     </div>
