Downcase page title

--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Thyme</title>
+  <title>thyme</title>
   <link href="bower_components/font-awesome/css/font-awesome.css" rel="stylesheet">
   <link rel="stylesheet" href="/thyme.css">
 </head>
