Show photo focal length (and 35 mm equivalent)

--- a/public/index.html
+++ b/public/index.html
@@ -53,6 +53,7 @@
       <!-- ko if: takenAt --><tr><th>Taken</th><td data-bind="text: $parent.relativeTakenAt(), attr: { title: $parent.formattedTakenAt() }"></td></tr><!-- /ko -->
       <!-- ko if: exif.Make && exif.Model --><tr><th>Camera</th><td data-bind="text: exif.Make + ' ' + exif.Model"></td></tr><!-- /ko -->
       <!-- ko if: exif.Artist --><tr><th>Artist</th><td data-bind="text: exif.Artist"></td></tr><!-- /ko -->
+      <!-- ko if: $parent.formattedFocalLength() --><tr><th>Focal length</th><td data-bind="html: $parent.formattedFocalLength()"></td></tr><!-- /ko -->
       <!-- ko if: exif.ExposureTime --><tr><th>Shutter speed</th><td data-bind="text: exif.ExposureTime + ' s'"></td></tr><!-- /ko -->
       <!-- ko if: exif.FNumber --><tr><th>Aperture size</th><td data-bind="text: 'f/' + exif.FNumber"></td></tr><!-- /ko -->
       <!-- ko if: exif.ISO --><tr><th>ISO</th><td data-bind="text: exif.ISO"></td></tr><!-- /ko -->
