--- a/public/index.html
+++ b/public/index.html
@@ -43,21 +43,23 @@
     </li>
   </script>
   <script type="text/html" id="photo-template">
-    <img data-bind="attr: { src: data.bigThumbUrl, alt: fileName() }, css: 'big-thumb'">
-    <table id="photo-details" data-bind="with: data">
-      <tr><th>File name</th><td data-bind="text: $parent.fileName()"></td></tr>
-      <tr><th>File size</th><td data-bind="text: $parent.fileSize()"></td></tr>
-      <tr><th>Dimensions</th><td data-bind="html: width + '&times;' + height + ' (' + $parent.aspectRatioText() + ')'"></td></tr>
-      <!-- ko if: takenAt --><tr><th>Taken</th><td data-bind="text: $parent.takenAtText(), attr: { title: $parent.takenAtTitle() }"></td></tr><!-- /ko -->
-      <!-- ko if: exif.Make && exif.Model --><tr><th>Camera</th><td data-bind="text: exif.Make + ' ' + exif.Model"></td></tr><!-- /ko -->
-      <!-- ko if: exif.LensInfo --><tr><th>Lens</th><td data-bind="text: exif.LensInfo"></td></tr><!-- /ko -->
-      <!-- ko if: $parent.focalLength() --><tr><th>Focal length</th><td data-bind="html: $parent.focalLength()"></td></tr><!-- /ko -->
-      <!-- ko if: exif.FNumber --><tr><th>Aperture</th><td class="aperture" data-bind="html: '<span>f</span>/' + exif.FNumber"></td></tr><!-- /ko -->
-      <!-- ko if: exif.ExposureTime --><tr><th>Shutter speed</th><td data-bind="text: exif.ExposureTime + ' s'"></td></tr><!-- /ko -->
-      <!-- ko if: exif.ISO --><tr><th>ISO</th><td data-bind="text: exif.ISO"></td></tr><!-- /ko -->
-      <!-- ko if: exif.ExposureCompensation --><tr><th>Exp. compensation</th><td data-bind="text: exif.ExposureCompensation"></td></tr><!-- /ko -->
-      <!-- ko if: exif.Flash --><tr><th>Flash</th><td data-bind="text: exif.Flash"></td></tr><!-- /ko -->
-    </table>
+    <img data-bind="attr: { src: data.bigThumbUrl, alt: fileName() }">
+    <ul id="details">
+      <li data-bind="text: fileName()"></li>
+      <li data-bind="text: fileSize()"></li>
+      <li data-bind="html: data.width + '&times;' + data.height + ' (' + aspectRatioText() + ')'"></li>
+      <!-- ko if: data.takenAt --><li data-bind="text: takenAtText(), attr: { title: takenAtTitle() }"></li><!-- /ko -->
+      <!-- ko with: data -->
+        <!-- ko if: exif.Make && exif.Model --><li title="Camera" data-bind="text: exif.Make + ' ' + exif.Model"></li><!-- /ko -->
+        <!-- ko if: exif.LensInfo --><li title="Lens" data-bind="text: exif.LensInfo"></li><!-- /ko -->
+        <!-- ko if: $parent.focalLength() --><li title="Focal length" data-bind="html: $parent.focalLength()"></li><!-- /ko -->
+        <!-- ko if: exif.FNumber --><li title="Aperture" class="aperture" data-bind="html: '<span>f</span>/' + exif.FNumber"></li><!-- /ko -->
+        <!-- ko if: exif.ExposureTime --><li title="Shutter speed" data-bind="text: exif.ExposureTime + ' s'"></li><!-- /ko -->
+        <!-- ko if: exif.ISO --><li data-bind="text: 'ISO ' + exif.ISO"></li><!-- /ko -->
+        <!-- ko if: exif.ExposureCompensation --><li title="Exposure compensation" data-bind="text: exif.ExposureCompensation"></li><!-- /ko -->
+        <!-- ko if: exif.Flash --><li data-bind="text: 'Flash ' + exif.Flash"></li><!-- /ko -->
+      <!-- /ko -->
+    </ul>
   </script>
   <script src="bower_components/jquery/dist/jquery.js"></script>
   <script src="bower_components/lodash/lodash.js"></script>
