--- a/public/index.html
+++ b/public/index.html
@@ -49,15 +49,15 @@
       <li data-bind="text: fileSize()"></li>
       <li data-bind="html: data.width + '&times;' + data.height + ' (' + aspectRatioText() + ')'"></li>
       <!-- ko if: data.taken_at --><li data-bind="text: takenAtText(), attr: { title: takenAtTitle() }"></li><!-- /ko -->
-      <!-- ko with: data -->
-        <!-- ko if: exif.Make && exif.Model --><li title="Camera" data-bind="text: exif.Make + ' ' + exif.Model"></li><!-- /ko -->
-        <!-- ko if: exif.LensInfo --><li title="Lens" data-bind="text: exif.LensInfo"></li><!-- /ko -->
+      <!-- ko with: data.exif -->
+        <!-- ko if: Make && Model --><li title="Camera" data-bind="text: Make + ' ' + Model"></li><!-- /ko -->
+        <!-- ko if: LensInfo --><li title="Lens" data-bind="text: LensInfo"></li><!-- /ko -->
         <!-- ko if: $parent.focalLength() --><li title="Focal length" data-bind="html: $parent.focalLength()"></li><!-- /ko -->
-        <!-- ko if: exif.FNumber --><li title="Aperture" class="aperture" data-bind="html: '<span>f</span>/' + exif.FNumber"></li><!-- /ko -->
-        <!-- ko if: exif.ExposureTime --><li title="Shutter speed" data-bind="text: exif.ExposureTime + ' s'"></li><!-- /ko -->
-        <!-- ko if: exif.ISO --><li data-bind="text: 'ISO ' + exif.ISO"></li><!-- /ko -->
-        <!-- ko if: exif.ExposureCompensation --><li title="Exposure compensation" data-bind="text: exif.ExposureCompensation"></li><!-- /ko -->
-        <!-- ko if: exif.Flash --><li data-bind="text: 'Flash ' + exif.Flash"></li><!-- /ko -->
+        <!-- ko if: FNumber --><li title="Aperture" class="aperture" data-bind="html: '<span>f</span>/' + FNumber"></li><!-- /ko -->
+        <!-- ko if: ExposureTime --><li title="Shutter speed" data-bind="text: ExposureTime + ' s'"></li><!-- /ko -->
+        <!-- ko if: ISO --><li data-bind="text: 'ISO ' + ISO"></li><!-- /ko -->
+        <!-- ko if: ExposureCompensation --><li title="Exposure compensation" data-bind="text: ExposureCompensation"></li><!-- /ko -->
+        <!-- ko if: Flash --><li data-bind="text: 'Flash ' + Flash"></li><!-- /ko -->
       <!-- /ko -->
     </ul>
   </script>
