--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
       <div id="prev-photo" data-bind="template: { name: 'photo-thumb-template', data: prevPhoto, if: prevPhoto }"></div>
       <div id="parent-set" data-bind="template: { name: 'set-thumb-template', data: set, if: set }"></div>
       <div id="next-photo" data-bind="template: { name: 'photo-thumb-template', data: nextPhoto, if: nextPhoto }"></div>
-      <img data-bind="attr: { src: data.big_thumb_url, alt: fileName(), width: data.big_thumb_width, height: data.big_thumb_height }">
+      <img data-bind="attr: { src: data.big_thumb_url, alt: fileName(), width: bigThumbWidth(), height: bigThumbHeight() }">
       <ul id="details">
         <li data-bind="text: fileName()"></li>
         <li data-bind="text: fileSize()"></li>
